syntax = "proto3";

package envoymobile.extensions.filters.http.test_remote_response;

message TestRemoteResponse {
}
